--- a/index.html
+++ b/index.html
@@ -2,12 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>The main document</title>
+  <title>The main document 2</title>
 </head>
 <body>
   <h1>Hello World!</h1>
-  <p>
-    Some text
-  </p>
 </body>
 </html>
